feat: add parser ir schema validation cli